// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeader Component should render with props passed in 1`] = `
<thead>
  <Header />
  <tr>
    <td
      id="refresh-wrapper"
    >
      <h4>
        <a
          id="refresh"
          onClick={[Function]}
        >
          Refresh
        </a>
      </h4>
    </td>
    <td
      id="update-wrapper"
    >
      <h4>
        Last updated 
        2017-09-09
      </h4>
    </td>
  </tr>
</thead>
`;

exports[`TableHeader Component should render without any props defined 1`] = `
<thead>
  <Header />
  <tr>
    <td
      id="refresh-wrapper"
    >
      <h4>
        <a
          id="refresh"
          onClick={[Function]}
        >
          Refresh
        </a>
      </h4>
    </td>
    <td
      id="update-wrapper"
    >
      <h4>
        Last updated 
      </h4>
    </td>
  </tr>
</thead>
`;

exports[`TableHeader Component simulate refresh clicked 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <thead>
    <Header />
    <tr>
        <td
            id="refresh-wrapper"
        >
            <h4>
                <a
                    id="refresh"
                    onClick={[Function]}
                >
                    Refresh
                </a>
            </h4>
        </td>
        <td
            id="update-wrapper"
        >
            <h4>
                Last updated 
                2017-09-09
            </h4>
        </td>
    </tr>
</thead>,
  "nodes": Array [
    <thead>
      <Header />
      <tr>
            <td
                  id="refresh-wrapper"
            >
                  <h4>
                        <a
                              id="refresh"
                              onClick={[Function]}
                        >
                              Refresh
                        </a>
                  </h4>
            </td>
            <td
                  id="update-wrapper"
            >
                  <h4>
                        Last updated 
                        2017-09-09
                  </h4>
            </td>
      </tr>
</thead>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Unknown
        currentTime="2017-09-09"
/>,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "currentTime": "2017-09-09",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <thead>
          <Header />
          <tr>
                    <td
                              id="refresh-wrapper"
                    >
                              <h4>
                                        <a
                                                  id="refresh"
                                                  onClick={[Function]}
                                        >
                                                  Refresh
                                        </a>
                              </h4>
                    </td>
                    <td
                              id="update-wrapper"
                    >
                              <h4>
                                        Last updated 
                                        2017-09-09
                              </h4>
                    </td>
          </tr>
</thead>,
        "_debugID": 6,
        "_renderedOutput": <thead>
          <Header />
          <tr>
                    <td
                              id="refresh-wrapper"
                    >
                              <h4>
                                        <a
                                                  id="refresh"
                                                  onClick={[Function]}
                                        >
                                                  Refresh
                                        </a>
                              </h4>
                    </td>
                    <td
                              id="update-wrapper"
                    >
                              <h4>
                                        Last updated 
                                        2017-09-09
                              </h4>
                    </td>
          </tr>
</thead>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Unknown
    currentTime="2017-09-09"
/>,
}
`;

exports[`TableHeader Component simulate refresh clicked 2`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <thead>
    <Header />
    <tr>
        <td
            id="refresh-wrapper"
        >
            <h4>
                <a
                    id="refresh"
                    onClick={[Function]}
                >
                    Refresh
                </a>
            </h4>
        </td>
        <td
            id="update-wrapper"
        >
            <h4>
                Last updated 
                2017-09-09
            </h4>
        </td>
    </tr>
</thead>,
  "nodes": Array [
    <thead>
      <Header />
      <tr>
            <td
                  id="refresh-wrapper"
            >
                  <h4>
                        <a
                              id="refresh"
                              onClick={[Function]}
                        >
                              Refresh
                        </a>
                  </h4>
            </td>
            <td
                  id="update-wrapper"
            >
                  <h4>
                        Last updated 
                        2017-09-09
                  </h4>
            </td>
      </tr>
</thead>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Unknown
        currentTime="2017-09-09"
/>,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "currentTime": "2017-09-09",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <thead>
          <Header />
          <tr>
                    <td
                              id="refresh-wrapper"
                    >
                              <h4>
                                        <a
                                                  id="refresh"
                                                  onClick={[Function]}
                                        >
                                                  Refresh
                                        </a>
                              </h4>
                    </td>
                    <td
                              id="update-wrapper"
                    >
                              <h4>
                                        Last updated 
                                        2017-09-09
                              </h4>
                    </td>
          </tr>
</thead>,
        "_debugID": 6,
        "_renderedOutput": <thead>
          <Header />
          <tr>
                    <td
                              id="refresh-wrapper"
                    >
                              <h4>
                                        <a
                                                  id="refresh"
                                                  onClick={[Function]}
                                        >
                                                  Refresh
                                        </a>
                              </h4>
                    </td>
                    <td
                              id="update-wrapper"
                    >
                              <h4>
                                        Last updated 
                                        2017-09-09
                              </h4>
                    </td>
          </tr>
</thead>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Unknown
    currentTime="2017-09-09"
/>,
}
`;
